# k8s-node-perf-evaluator

./: .gitignore  README.md  build-binary.sh  config.yaml  go.mod  go.sum
.github/workflows/: build-perf-evaluator.yaml  code-scan.yaml
cmd/test-runner/: main.go
cmd/test-service/: main.go
docker/: Dockerfile.test-runner  Dockerfile.test-service
pkg/config/: reader.go
pkg/evaluator/: kube_resources.go  runner.go
pkg/k8s/: client.go  create.go  delete.go  get.go  interface.go  list.go  types.go  wait.go
pkg/reports/: console.go  metrics.go
pkg/reports/writer/: json.go  text.go  writer.go
tests/: README.md  config.yaml  conftest.py  pyproject.toml  test_runner.py  test_service.py  utils.py
tests/utils/: docker.py  kind_cluster.py
